@@ -10,9 +10,13 @@
     main/Si/Chandler-Horowitz.yml
   new data (thanks to Rob Treharne, University of Liverpool, UK, for providing data in yaml format!)
     other/perovskite/CH3NH3PbI3/Phillips.yml
+  new data (thanks to Mathieu Perrin INSA Rennes, France for suggesting data)
+    main/ZnSe/Marple.yml
+    main/ZnTe/Marple.yml
+    main/CdTe/Marple.yml
   bug fixes
     corrected misspelled McPeak name in libraty.yml
-	fixed dispersion formula in main/LiIO3/Herbst-o.yml.yml (thanks to Jiaan Zheng, DESY, Hamburg, Germany)
+    fixed dispersion formula in main/LiIO3/Herbst-o.yml.yml (thanks to Jiaan Zheng, DESY, Hamburg, Germany)
     fixed missing data headers in glass/schott/obsolete/LAKL12.yml and LASFN9.yml (thanks to Thibault North!)
     removed tabs in main/Ag/McPeak.yml, main/Al/McPeak.yml, main/Au/McPeak.yml, main/Cu/McPeak.yml (thanks to Thibault North!)
     fixed encoding error in main/Ag3AsS3/Hulme-e.yml (thanks to Thibault North!)
